--- a/telas/solicitar-reserva.fxml
+++ b/telas/solicitar-reserva.fxml
@@ -44,23 +44,23 @@
             </MenuBar>
          </children>
       </HBox>
-      <Text layoutX="14.0" layoutY="83.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Quantidade de Mesas Disponíveis: 5">
+      <Text fx:id="qtdMesasDisponiveis" layoutX="14.0" layoutY="83.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Quantidade de Mesas Disponíveis: 5">
          <font>
             <Font size="20.0" />
          </font>
       </Text>
-      <Text layoutX="14.0" layoutY="251.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Horários Disponíveis:" wrappingWidth="196.39599609375">
+      <Text fx:id="horariosDisponiveis" layoutX="14.0" layoutY="251.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Horários Disponíveis:" wrappingWidth="196.39599609375">
          <font>
             <Font size="20.0" />
          </font>
       </Text>
-      <ChoiceBox layoutX="210.0" layoutY="232.0" prefHeight="25.0" prefWidth="221.0" />
-      <Text layoutX="14.0" layoutY="111.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Reservas feitas para hoje: null">
+      <ChoiceBox fx:id="selecionarHorario" layoutX="210.0" layoutY="232.0" onScroll="#opcoesDeHorario" prefHeight="25.0" prefWidth="221.0" />
+      <Text fx:id="qtdReservasFeitas" layoutX="14.0" layoutY="111.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Reservas feitas para hoje: null">
          <font>
             <Font size="20.0" />
          </font>
       </Text>
-      <Text layoutX="14.0" layoutY="137.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Estimativa de Pessoas: null">
+      <Text fx:id="totalPessoas" layoutX="14.0" layoutY="137.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Estimativa de Pessoas: null">
          <font>
             <Font size="20.0" />
          </font>
@@ -75,16 +75,16 @@
       <Box depth="100" drawMode="LINE" height="100" layoutX="367.0" layoutY="365.0" width="100" />
       <Box depth="100" drawMode="LINE" height="100" layoutX="504.0" layoutY="365.0" width="100" />
       <Box depth="100" drawMode="LINE" height="100" layoutX="644.0" layoutY="365.0" width="100" />
-      <CheckBox layoutX="52.0" layoutY="425.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="84.0" text="Selecionar" />
-      <CheckBox layoutX="192.0" layoutY="425.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="84.0" text="Selecionar" />
-      <CheckBox layoutX="324.0" layoutY="425.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="84.0" text="Selecionar" />
-      <CheckBox layoutX="462.0" layoutY="425.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="84.0" text="Selecionar" />
-      <CheckBox layoutX="602.0" layoutY="425.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="84.0" text="Selecionar" />
+      <CheckBox layoutX="52.0" layoutY="425.0" mnemonicParsing="false" onMouseClicked="#selecionarMesa" prefHeight="27.0" prefWidth="84.0" text="Selecionar" />
+      <CheckBox layoutX="192.0" layoutY="425.0" mnemonicParsing="false" onMouseClicked="#selecionarMesa" prefHeight="27.0" prefWidth="84.0" text="Selecionar" />
+      <CheckBox layoutX="324.0" layoutY="425.0" mnemonicParsing="false" onMouseClicked="#selecionarMesa" prefHeight="27.0" prefWidth="84.0" text="Selecionar" />
+      <CheckBox layoutX="462.0" layoutY="425.0" mnemonicParsing="false" onMouseClicked="#selecionarMesa" prefHeight="27.0" prefWidth="84.0" text="Selecionar" />
+      <CheckBox layoutX="602.0" layoutY="425.0" mnemonicParsing="false" onMouseClicked="#selecionarMesa" prefHeight="27.0" prefWidth="84.0" text="Selecionar" />
       <Text layoutX="71.0" layoutY="370.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mesa 1" />
       <Text layoutX="215.0" layoutY="369.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mesa 2" />
       <Text layoutX="348.0" layoutY="370.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mesa 3" />
       <Text layoutX="485.0" layoutY="370.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mesa 4" />
       <Text layoutX="625.0" layoutY="370.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mesa 5" />
-      <Button layoutX="308.0" layoutY="482.0" mnemonicParsing="false" prefHeight="49.0" prefWidth="116.0" text="Solicitar Reserva" />
+      <Button fx:id="btnSolicitarReserva" layoutX="308.0" layoutY="482.0" mnemonicParsing="false" onAction="#confirmarSolicitacao" prefHeight="49.0" prefWidth="116.0" text="Solicitar Reserva" />
    </children>
 </Pane>
